[fix] dark mode mobile result colors

--- a/src/less/definitions.less
+++ b/src/less/definitions.less
@@ -124,7 +124,7 @@
   --color-base-font: #bdc1c6;
   --color-base-font-rgb: 189, 193, 198;
   --color-base-background: #202124;
-  --color-base-background-mobile: #202124;
+  --color-base-background-mobile: #171717;
   --color-url-font: #8ab4f8;
   --color-url-visited-font: #c58af9;
   /// Header Colors
@@ -171,9 +171,9 @@
   --color-autocomplete-background-hover: #171717;
   /// Answer Colors
   --color-answer-font: #fff;
-  --color-answer-background: #171717;
+  --color-answer-background: #202124;
   /// Results Colors
-  --color-result-background: #303134;
+  --color-result-background: #202124;
   --color-result-border: #3c4043;
   --color-result-url-font: #bdc1c6;
   --color-result-vim-selected: #171717;
